# llm-voice-recognition

./: .gitignore
llm-voice-recognition/: README.md  pyproject.toml
llm-voice-recognition/tests/: test_llm_voice_recognition.py
voice_assistant/: .gitignore  EXECUCAO.md  MELHORIAS.md  README.md  download_model.py  exemplo_texto.txt  llm_manager.py  main.py  requirements.txt  test_audio.py  test_corrections.py  test_setup.py  voice_recognizer.py  voice_synthesizer.py
